ast_grammar.output
Terminals unused in grammar

   DOCTYPE
   TD_S
   TD_E
   TABLE_S
   TABLE_E
   CAPTION_S
   CAPTION_E
   TH_S
   TH_E
   TR_S
   TR_E
   TABLE_BORDER


Grammar

    0 $accept: html_start $end

    1 html_start: HTML_S content_head content_body HTML_E

    2 content_head: HEAD_S content_head content_title content_head HEAD_E
    3             | DATA
    4             | %empty

    5 content_title: TITLE_S data TITLE_E

    6 content_body: BODY_S body BODY_E

    7 body: body p_tag data
    8     | body center_tag data
    9     | body href_tag data
   10     | body br_tag data
   11     | body font_tag data
   12     | body header_tag data
   13     | body format_tag data
   14     | body subsup_tag data
   15     | body img_tag data
   16     | body div_tag data
   17     | body li_tag data
   18     | body ul_tag data
   19     | body ol_tag data
   20     | body dl_tag data
   21     | body dd_tag data
   22     | body dt_tag data
   23     | data

   24 data: data DATA
   25     | data GREEK
   26     | data COMMENT
   27     | %empty

   28 p_tag: P_S body P_E

   29 center_tag: CENTER_S body CENTER_E

   30 href_tag: HREF_S content_href body HREF_E

   31 content_href: content_href HREF_LINK
   32             | content_href HREF_TITLE
   33             | content_href HREF_NAME
   34             | %empty

   35 br_tag: BR
   36       | BR_S

   37 font_tag: FONT_S content_font body FONT_E

   38 content_font: content_font FONT_SIZE
   39             | %empty

   40 header_tag: H1_S body H1_E
   41           | H2_S body H2_E
   42           | H3_S body H3_E
   43           | H4_S body H4_E

   44 format_tag: U_S body U_E
   45           | B_S body B_E
   46           | I_S body I_E
   47           | EM_S body EM_E
   48           | TT_S body TT_E
   49           | STRONG_S body STRONG_E
   50           | SMALL_S body SMALL_E

   51 subsup_tag: SUP_S body SUP_E
   52           | SUB_S body SUB_E

   53 img_tag: IMG_S content_img IMG_E fig_caption
   54        | FIG_S IMG_S content_img IMG_E fig_caption FIG_E

   55 fig_caption: FIGCAP_S body FIGCAP_E
   56            | %empty

   57 content_img: content_img IMG_SRC
   58            | content_img IMG_HEIGHT
   59            | content_img IMG_WIDTH
   60            | %empty

   61 div_tag: DIV_S body DIV_E

   62 li_tag: LI_S body LI_E

   63 ul_tag: UL_S body UL_E

   64 ol_tag: OL_S body OL_E

   65 dl_tag: DL_S body DL_E

   66 dt_tag: DT_S body DT_E

   67 dd_tag: DD_S body DD_E


Terminals, with rules where they appear

$end (0) 0
error (256)
DOCTYPE (258)
HTML_S (259) 1
HTML_E (260) 1
HEAD_S (261) 2
HEAD_E (262) 2
TITLE_S (263) 5
TITLE_E (264) 5
BODY_S (265) 6
BODY_E (266) 6
HREF_S (267) 30
HREF_E (268) 30
FONT_S (269) 37
FONT_E (270) 37
CENTER_S (271) 29
CENTER_E (272) 29
BR (273) 35
P_S (274) 28
P_E (275) 28
H1_S (276) 40
H1_E (277) 40
H2_S (278) 41
H2_E (279) 41
H3_S (280) 42
H3_E (281) 42
H4_S (282) 43
H4_E (283) 43
UL_S (284) 63
UL_E (285) 63
LI_S (286) 62
LI_E (287) 62
OL_S (288) 64
OL_E (289) 64
TD_S (290)
DL_S (291) 65
TD_E (292)
DL_E (293) 65
DT_S (294) 66
DT_E (295) 66
DD_S (296) 67
DD_E (297) 67
DIV_S (298) 61
DIV_E (299) 61
U_S (300) 44
U_E (301) 44
B_S (302) 45
B_E (303) 45
I_S (304) 46
I_E (305) 46
EM_S (306) 47
EM_E (307) 47
TT_S (308) 48
TT_E (309) 48
STRONG_S (310) 49
STRONG_E (311) 49
SMALL_S (312) 50
SMALL_E (313) 50
SUB_S (314) 52
SUB_E (315) 52
SUP_S (316) 51
SUP_E (317) 51
TABLE_S (318)
TABLE_E (319)
CAPTION_S (320)
CAPTION_E (321)
TH_S (322)
TH_E (323)
TR_S (324)
TR_E (325)
HREF_LINK (326) 31
FONT_SIZE (327) 38
HREF_TITLE (328) 32
IMG_S (329) 53 54
IMG_SRC (330) 57
IMG_WIDTH (331) 59
IMG_HEIGHT (332) 58
FIG_S (333) 54
DATA (334) 3 24
GREEK (335) 25
TABLE_BORDER (336)
FIG_E (337) 54
IMG_E (338) 53 54
FIGCAP_S (339) 55
FIGCAP_E (340) 55
BR_S (341) 36
HREF_NAME (342) 33
COMMENT (343) 26


Nonterminals, with rules where they appear

$accept (89)
    on left: 0
html_start (90)
    on left: 1, on right: 0
content_head (91)
    on left: 2 3 4, on right: 1 2
content_title (92)
    on left: 5, on right: 2
content_body (93)
    on left: 6, on right: 1
body (94)
    on left: 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23, on right:
    6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 28 29 30 37 40 41
    42 43 44 45 46 47 48 49 50 51 52 55 61 62 63 64 65 66 67
data (95)
    on left: 24 25 26 27, on right: 5 7 8 9 10 11 12 13 14 15 16 17
    18 19 20 21 22 23 24 25 26
p_tag (96)
    on left: 28, on right: 7
center_tag (97)
    on left: 29, on right: 8
href_tag (98)
    on left: 30, on right: 9
content_href (99)
    on left: 31 32 33 34, on right: 30 31 32 33
br_tag (100)
    on left: 35 36, on right: 10
font_tag (101)
    on left: 37, on right: 11
content_font (102)
    on left: 38 39, on right: 37 38
header_tag (103)
    on left: 40 41 42 43, on right: 12
format_tag (104)
    on left: 44 45 46 47 48 49 50, on right: 13
subsup_tag (105)
    on left: 51 52, on right: 14
img_tag (106)
    on left: 53 54, on right: 15
fig_caption (107)
    on left: 55 56, on right: 53 54
content_img (108)
    on left: 57 58 59 60, on right: 53 54 57 58 59
div_tag (109)
    on left: 61, on right: 16
li_tag (110)
    on left: 62, on right: 17
ul_tag (111)
    on left: 63, on right: 18
ol_tag (112)
    on left: 64, on right: 19
dl_tag (113)
    on left: 65, on right: 20
dt_tag (114)
    on left: 66, on right: 22
dd_tag (115)
    on left: 67, on right: 21


State 0

    0 $accept: . html_start $end

    HTML_S  shift, and go to state 1

    html_start  go to state 2


State 1

    1 html_start: HTML_S . content_head content_body HTML_E

    HEAD_S  shift, and go to state 3
    DATA    shift, and go to state 4

    $default  reduce using rule 4 (content_head)

    content_head  go to state 5


State 2

    0 $accept: html_start . $end

    $end  shift, and go to state 6


State 3

    2 content_head: HEAD_S . content_head content_title content_head HEAD_E

    HEAD_S  shift, and go to state 3
    DATA    shift, and go to state 4

    $default  reduce using rule 4 (content_head)

    content_head  go to state 7


State 4

    3 content_head: DATA .

    $default  reduce using rule 3 (content_head)


State 5

    1 html_start: HTML_S content_head . content_body HTML_E

    BODY_S  shift, and go to state 8

    content_body  go to state 9


State 6

    0 $accept: html_start $end .

    $default  accept


State 7

    2 content_head: HEAD_S content_head . content_title content_head HEAD_E

    TITLE_S  shift, and go to state 10

    content_title  go to state 11


State 8

    6 content_body: BODY_S . body BODY_E

    $default  reduce using rule 27 (data)

    body  go to state 12
    data  go to state 13


State 9

    1 html_start: HTML_S content_head content_body . HTML_E

    HTML_E  shift, and go to state 14


State 10

    5 content_title: TITLE_S . data TITLE_E

    $default  reduce using rule 27 (data)

    data  go to state 15


State 11

    2 content_head: HEAD_S content_head content_title . content_head HEAD_E

    HEAD_S  shift, and go to state 3
    DATA    shift, and go to state 4

    $default  reduce using rule 4 (content_head)

    content_head  go to state 16


State 12

    6 content_body: BODY_S body . BODY_E
    7 body: body . p_tag data
    8     | body . center_tag data
    9     | body . href_tag data
   10     | body . br_tag data
   11     | body . font_tag data
   12     | body . header_tag data
   13     | body . format_tag data
   14     | body . subsup_tag data
   15     | body . img_tag data
   16     | body . div_tag data
   17     | body . li_tag data
   18     | body . ul_tag data
   19     | body . ol_tag data
   20     | body . dl_tag data
   21     | body . dd_tag data
   22     | body . dt_tag data

    BODY_E    shift, and go to state 17
    HREF_S    shift, and go to state 18
    FONT_S    shift, and go to state 19
    CENTER_S  shift, and go to state 20
    BR        shift, and go to state 21
    P_S       shift, and go to state 22
    H1_S      shift, and go to state 23
    H2_S      shift, and go to state 24
    H3_S      shift, and go to state 25
    H4_S      shift, and go to state 26
    UL_S      shift, and go to state 27
    LI_S      shift, and go to state 28
    OL_S      shift, and go to state 29
    DL_S      shift, and go to state 30
    DT_S      shift, and go to state 31
    DD_S      shift, and go to state 32
    DIV_S     shift, and go to state 33
    U_S       shift, and go to state 34
    B_S       shift, and go to state 35
    I_S       shift, and go to state 36
    EM_S      shift, and go to state 37
    TT_S      shift, and go to state 38
    STRONG_S  shift, and go to state 39
    SMALL_S   shift, and go to state 40
    SUB_S     shift, and go to state 41
    SUP_S     shift, and go to state 42
    IMG_S     shift, and go to state 43
    FIG_S     shift, and go to state 44
    BR_S      shift, and go to state 45

    p_tag       go to state 46
    center_tag  go to state 47
    href_tag    go to state 48
    br_tag      go to state 49
    font_tag    go to state 50
    header_tag  go to state 51
    format_tag  go to state 52
    subsup_tag  go to state 53
    img_tag     go to state 54
    div_tag     go to state 55
    li_tag      go to state 56
    ul_tag      go to state 57
    ol_tag      go to state 58
    dl_tag      go to state 59
    dt_tag      go to state 60
    dd_tag      go to state 61


State 13

   23 body: data .
   24 data: data . DATA
   25     | data . GREEK
   26     | data . COMMENT

    DATA     shift, and go to state 62
    GREEK    shift, and go to state 63
    COMMENT  shift, and go to state 64

    $default  reduce using rule 23 (body)


State 14

    1 html_start: HTML_S content_head content_body HTML_E .

    $default  reduce using rule 1 (html_start)


State 15

    5 content_title: TITLE_S data . TITLE_E
   24 data: data . DATA
   25     | data . GREEK
   26     | data . COMMENT

    TITLE_E  shift, and go to state 65
    DATA     shift, and go to state 62
    GREEK    shift, and go to state 63
    COMMENT  shift, and go to state 64


State 16

    2 content_head: HEAD_S content_head content_title content_head . HEAD_E

    HEAD_E  shift, and go to state 66


State 17

    6 content_body: BODY_S body BODY_E .

    $default  reduce using rule 6 (content_body)


State 18

   30 href_tag: HREF_S . content_href body HREF_E

    $default  reduce using rule 34 (content_href)

    content_href  go to state 67


State 19

   37 font_tag: FONT_S . content_font body FONT_E

    $default  reduce using rule 39 (content_font)

    content_font  go to state 68


State 20

   29 center_tag: CENTER_S . body CENTER_E

    $default  reduce using rule 27 (data)

    body  go to state 69
    data  go to state 13


State 21

   35 br_tag: BR .

    $default  reduce using rule 35 (br_tag)


State 22

   28 p_tag: P_S . body P_E

    $default  reduce using rule 27 (data)

    body  go to state 70
    data  go to state 13


State 23

   40 header_tag: H1_S . body H1_E

    $default  reduce using rule 27 (data)

    body  go to state 71
    data  go to state 13


State 24

   41 header_tag: H2_S . body H2_E

    $default  reduce using rule 27 (data)

    body  go to state 72
    data  go to state 13


State 25

   42 header_tag: H3_S . body H3_E

    $default  reduce using rule 27 (data)

    body  go to state 73
    data  go to state 13


State 26

   43 header_tag: H4_S . body H4_E

    $default  reduce using rule 27 (data)

    body  go to state 74
    data  go to state 13


State 27

   63 ul_tag: UL_S . body UL_E

    $default  reduce using rule 27 (data)

    body  go to state 75
    data  go to state 13


State 28

   62 li_tag: LI_S . body LI_E

    $default  reduce using rule 27 (data)

    body  go to state 76
    data  go to state 13


State 29

   64 ol_tag: OL_S . body OL_E

    $default  reduce using rule 27 (data)

    body  go to state 77
    data  go to state 13


State 30

   65 dl_tag: DL_S . body DL_E

    $default  reduce using rule 27 (data)

    body  go to state 78
    data  go to state 13


State 31

   66 dt_tag: DT_S . body DT_E

    $default  reduce using rule 27 (data)

    body  go to state 79
    data  go to state 13


State 32

   67 dd_tag: DD_S . body DD_E

    $default  reduce using rule 27 (data)

    body  go to state 80
    data  go to state 13


State 33

   61 div_tag: DIV_S . body DIV_E

    $default  reduce using rule 27 (data)

    body  go to state 81
    data  go to state 13


State 34

   44 format_tag: U_S . body U_E

    $default  reduce using rule 27 (data)

    body  go to state 82
    data  go to state 13


State 35

   45 format_tag: B_S . body B_E

    $default  reduce using rule 27 (data)

    body  go to state 83
    data  go to state 13


State 36

   46 format_tag: I_S . body I_E

    $default  reduce using rule 27 (data)

    body  go to state 84
    data  go to state 13


State 37

   47 format_tag: EM_S . body EM_E

    $default  reduce using rule 27 (data)

    body  go to state 85
    data  go to state 13


State 38

   48 format_tag: TT_S . body TT_E

    $default  reduce using rule 27 (data)

    body  go to state 86
    data  go to state 13


State 39

   49 format_tag: STRONG_S . body STRONG_E

    $default  reduce using rule 27 (data)

    body  go to state 87
    data  go to state 13


State 40

   50 format_tag: SMALL_S . body SMALL_E

    $default  reduce using rule 27 (data)

    body  go to state 88
    data  go to state 13


State 41

   52 subsup_tag: SUB_S . body SUB_E

    $default  reduce using rule 27 (data)

    body  go to state 89
    data  go to state 13


State 42

   51 subsup_tag: SUP_S . body SUP_E

    $default  reduce using rule 27 (data)

    body  go to state 90
    data  go to state 13


State 43

   53 img_tag: IMG_S . content_img IMG_E fig_caption

    $default  reduce using rule 60 (content_img)

    content_img  go to state 91


State 44

   54 img_tag: FIG_S . IMG_S content_img IMG_E fig_caption FIG_E

    IMG_S  shift, and go to state 92


State 45

   36 br_tag: BR_S .

    $default  reduce using rule 36 (br_tag)


State 46

    7 body: body p_tag . data

    $default  reduce using rule 27 (data)

    data  go to state 93


State 47

    8 body: body center_tag . data

    $default  reduce using rule 27 (data)

    data  go to state 94


State 48

    9 body: body href_tag . data

    $default  reduce using rule 27 (data)

    data  go to state 95


State 49

   10 body: body br_tag . data

    $default  reduce using rule 27 (data)

    data  go to state 96


State 50

   11 body: body font_tag . data

    $default  reduce using rule 27 (data)

    data  go to state 97


State 51

   12 body: body header_tag . data

    $default  reduce using rule 27 (data)

    data  go to state 98


State 52

   13 body: body format_tag . data

    $default  reduce using rule 27 (data)

    data  go to state 99


State 53

   14 body: body subsup_tag . data

    $default  reduce using rule 27 (data)

    data  go to state 100


State 54

   15 body: body img_tag . data

    $default  reduce using rule 27 (data)

    data  go to state 101


State 55

   16 body: body div_tag . data

    $default  reduce using rule 27 (data)

    data  go to state 102


State 56

   17 body: body li_tag . data

    $default  reduce using rule 27 (data)

    data  go to state 103


State 57

   18 body: body ul_tag . data

    $default  reduce using rule 27 (data)

    data  go to state 104


State 58

   19 body: body ol_tag . data

    $default  reduce using rule 27 (data)

    data  go to state 105


State 59

   20 body: body dl_tag . data

    $default  reduce using rule 27 (data)

    data  go to state 106


State 60

   22 body: body dt_tag . data

    $default  reduce using rule 27 (data)

    data  go to state 107


State 61

   21 body: body dd_tag . data

    $default  reduce using rule 27 (data)

    data  go to state 108


State 62

   24 data: data DATA .

    $default  reduce using rule 24 (data)


State 63

   25 data: data GREEK .

    $default  reduce using rule 25 (data)


State 64

   26 data: data COMMENT .

    $default  reduce using rule 26 (data)


State 65

    5 content_title: TITLE_S data TITLE_E .

    $default  reduce using rule 5 (content_title)


State 66

    2 content_head: HEAD_S content_head content_title content_head HEAD_E .

    $default  reduce using rule 2 (content_head)


State 67

   30 href_tag: HREF_S content_href . body HREF_E
   31 content_href: content_href . HREF_LINK
   32             | content_href . HREF_TITLE
   33             | content_href . HREF_NAME

    HREF_LINK   shift, and go to state 109
    HREF_TITLE  shift, and go to state 110
    HREF_NAME   shift, and go to state 111

    $default  reduce using rule 27 (data)

    body  go to state 112
    data  go to state 13


State 68

   37 font_tag: FONT_S content_font . body FONT_E
   38 content_font: content_font . FONT_SIZE

    FONT_SIZE  shift, and go to state 113

    $default  reduce using rule 27 (data)

    body  go to state 114
    data  go to state 13


State 69

    7 body: body . p_tag data
    8     | body . center_tag data
    9     | body . href_tag data
   10     | body . br_tag data
   11     | body . font_tag data
   12     | body . header_tag data
   13     | body . format_tag data
   14     | body . subsup_tag data
   15     | body . img_tag data
   16     | body . div_tag data
   17     | body . li_tag data
   18     | body . ul_tag data
   19     | body . ol_tag data
   20     | body . dl_tag data
   21     | body . dd_tag data
   22     | body . dt_tag data
   29 center_tag: CENTER_S body . CENTER_E

    HREF_S    shift, and go to state 18
    FONT_S    shift, and go to state 19
    CENTER_S  shift, and go to state 20
    CENTER_E  shift, and go to state 115
    BR        shift, and go to state 21
    P_S       shift, and go to state 22
    H1_S      shift, and go to state 23
    H2_S      shift, and go to state 24
    H3_S      shift, and go to state 25
    H4_S      shift, and go to state 26
    UL_S      shift, and go to state 27
    LI_S      shift, and go to state 28
    OL_S      shift, and go to state 29
    DL_S      shift, and go to state 30
    DT_S      shift, and go to state 31
    DD_S      shift, and go to state 32
    DIV_S     shift, and go to state 33
    U_S       shift, and go to state 34
    B_S       shift, and go to state 35
    I_S       shift, and go to state 36
    EM_S      shift, and go to state 37
    TT_S      shift, and go to state 38
    STRONG_S  shift, and go to state 39
    SMALL_S   shift, and go to state 40
    SUB_S     shift, and go to state 41
    SUP_S     shift, and go to state 42
    IMG_S     shift, and go to state 43
    FIG_S     shift, and go to state 44
    BR_S      shift, and go to state 45

    p_tag       go to state 46
    center_tag  go to state 47
    href_tag    go to state 48
    br_tag      go to state 49
    font_tag    go to state 50
    header_tag  go to state 51
    format_tag  go to state 52
    subsup_tag  go to state 53
    img_tag     go to state 54
    div_tag     go to state 55
    li_tag      go to state 56
    ul_tag      go to state 57
    ol_tag      go to state 58
    dl_tag      go to state 59
    dt_tag      go to state 60
    dd_tag      go to state 61


State 70

    7 body: body . p_tag data
    8     | body . center_tag data
    9     | body . href_tag data
   10     | body . br_tag data
   11     | body . font_tag data
   12     | body . header_tag data
   13     | body . format_tag data
   14     | body . subsup_tag data
   15     | body . img_tag data
   16     | body . div_tag data
   17     | body . li_tag data
   18     | body . ul_tag data
   19     | body . ol_tag data
   20     | body . dl_tag data
   21     | body . dd_tag data
   22     | body . dt_tag data
   28 p_tag: P_S body . P_E

    HREF_S    shift, and go to state 18
    FONT_S    shift, and go to state 19
    CENTER_S  shift, and go to state 20
    BR        shift, and go to state 21
    P_S       shift, and go to state 22
    P_E       shift, and go to state 116
    H1_S      shift, and go to state 23
    H2_S      shift, and go to state 24
    H3_S      shift, and go to state 25
    H4_S      shift, and go to state 26
    UL_S      shift, and go to state 27
    LI_S      shift, and go to state 28
    OL_S      shift, and go to state 29
    DL_S      shift, and go to state 30
    DT_S      shift, and go to state 31
    DD_S      shift, and go to state 32
    DIV_S     shift, and go to state 33
    U_S       shift, and go to state 34
    B_S       shift, and go to state 35
    I_S       shift, and go to state 36
    EM_S      shift, and go to state 37
    TT_S      shift, and go to state 38
    STRONG_S  shift, and go to state 39
    SMALL_S   shift, and go to state 40
    SUB_S     shift, and go to state 41
    SUP_S     shift, and go to state 42
    IMG_S     shift, and go to state 43
    FIG_S     shift, and go to state 44
    BR_S      shift, and go to state 45

    p_tag       go to state 46
    center_tag  go to state 47
    href_tag    go to state 48
    br_tag      go to state 49
    font_tag    go to state 50
    header_tag  go to state 51
    format_tag  go to state 52
    subsup_tag  go to state 53
    img_tag     go to state 54
    div_tag     go to state 55
    li_tag      go to state 56
    ul_tag      go to state 57
    ol_tag      go to state 58
    dl_tag      go to state 59
    dt_tag      go to state 60
    dd_tag      go to state 61


State 71

    7 body: body . p_tag data
    8     | body . center_tag data
    9     | body . href_tag data
   10     | body . br_tag data
   11     | body . font_tag data
   12     | body . header_tag data
   13     | body . format_tag data
   14     | body . subsup_tag data
   15     | body . img_tag data
   16     | body . div_tag data
   17     | body . li_tag data
   18     | body . ul_tag data
   19     | body . ol_tag data
   20     | body . dl_tag data
   21     | body . dd_tag data
   22     | body . dt_tag data
   40 header_tag: H1_S body . H1_E

    HREF_S    shift, and go to state 18
    FONT_S    shift, and go to state 19
    CENTER_S  shift, and go to state 20
    BR        shift, and go to state 21
    P_S       shift, and go to state 22
    H1_S      shift, and go to state 23
    H1_E      shift, and go to state 117
    H2_S      shift, and go to state 24
    H3_S      shift, and go to state 25
    H4_S      shift, and go to state 26
    UL_S      shift, and go to state 27
    LI_S      shift, and go to state 28
    OL_S      shift, and go to state 29
    DL_S      shift, and go to state 30
    DT_S      shift, and go to state 31
    DD_S      shift, and go to state 32
    DIV_S     shift, and go to state 33
    U_S       shift, and go to state 34
    B_S       shift, and go to state 35
    I_S       shift, and go to state 36
    EM_S      shift, and go to state 37
    TT_S      shift, and go to state 38
    STRONG_S  shift, and go to state 39
    SMALL_S   shift, and go to state 40
    SUB_S     shift, and go to state 41
    SUP_S     shift, and go to state 42
    IMG_S     shift, and go to state 43
    FIG_S     shift, and go to state 44
    BR_S      shift, and go to state 45

    p_tag       go to state 46
    center_tag  go to state 47
    href_tag    go to state 48
    br_tag      go to state 49
    font_tag    go to state 50
    header_tag  go to state 51
    format_tag  go to state 52
    subsup_tag  go to state 53
    img_tag     go to state 54
    div_tag     go to state 55
    li_tag      go to state 56
    ul_tag      go to state 57
    ol_tag      go to state 58
    dl_tag      go to state 59
    dt_tag      go to state 60
    dd_tag      go to state 61


State 72

    7 body: body . p_tag data
    8     | body . center_tag data
    9     | body . href_tag data
   10     | body . br_tag data
   11     | body . font_tag data
   12     | body . header_tag data
   13     | body . format_tag data
   14     | body . subsup_tag data
   15     | body . img_tag data
   16     | body . div_tag data
   17     | body . li_tag data
   18     | body . ul_tag data
   19     | body . ol_tag data
   20     | body . dl_tag data
   21     | body . dd_tag data
   22     | body . dt_tag data
   41 header_tag: H2_S body . H2_E

    HREF_S    shift, and go to state 18
    FONT_S    shift, and go to state 19
    CENTER_S  shift, and go to state 20
    BR        shift, and go to state 21
    P_S       shift, and go to state 22
    H1_S      shift, and go to state 23
    H2_S      shift, and go to state 24
    H2_E      shift, and go to state 118
    H3_S      shift, and go to state 25
    H4_S      shift, and go to state 26
    UL_S      shift, and go to state 27
    LI_S      shift, and go to state 28
    OL_S      shift, and go to state 29
    DL_S      shift, and go to state 30
    DT_S      shift, and go to state 31
    DD_S      shift, and go to state 32
    DIV_S     shift, and go to state 33
    U_S       shift, and go to state 34
    B_S       shift, and go to state 35
    I_S       shift, and go to state 36
    EM_S      shift, and go to state 37
    TT_S      shift, and go to state 38
    STRONG_S  shift, and go to state 39
    SMALL_S   shift, and go to state 40
    SUB_S     shift, and go to state 41
    SUP_S     shift, and go to state 42
    IMG_S     shift, and go to state 43
    FIG_S     shift, and go to state 44
    BR_S      shift, and go to state 45

    p_tag       go to state 46
    center_tag  go to state 47
    href_tag    go to state 48
    br_tag      go to state 49
    font_tag    go to state 50
    header_tag  go to state 51
    format_tag  go to state 52
    subsup_tag  go to state 53
    img_tag     go to state 54
    div_tag     go to state 55
    li_tag      go to state 56
    ul_tag      go to state 57
    ol_tag      go to state 58
    dl_tag      go to state 59
    dt_tag      go to state 60
    dd_tag      go to state 61


State 73

    7 body: body . p_tag data
    8     | body . center_tag data
    9     | body . href_tag data
   10     | body . br_tag data
   11     | body . font_tag data
   12     | body . header_tag data
   13     | body . format_tag data
   14     | body . subsup_tag data
   15     | body . img_tag data
   16     | body . div_tag data
   17     | body . li_tag data
   18     | body . ul_tag data
   19     | body . ol_tag data
   20     | body . dl_tag data
   21     | body . dd_tag data
   22     | body . dt_tag data
   42 header_tag: H3_S body . H3_E

    HREF_S    shift, and go to state 18
    FONT_S    shift, and go to state 19
    CENTER_S  shift, and go to state 20
    BR        shift, and go to state 21
    P_S       shift, and go to state 22
    H1_S      shift, and go to state 23
    H2_S      shift, and go to state 24
    H3_S      shift, and go to state 25
    H3_E      shift, and go to state 119
    H4_S      shift, and go to state 26
    UL_S      shift, and go to state 27
    LI_S      shift, and go to state 28
    OL_S      shift, and go to state 29
    DL_S      shift, and go to state 30
    DT_S      shift, and go to state 31
    DD_S      shift, and go to state 32
    DIV_S     shift, and go to state 33
    U_S       shift, and go to state 34
    B_S       shift, and go to state 35
    I_S       shift, and go to state 36
    EM_S      shift, and go to state 37
    TT_S      shift, and go to state 38
    STRONG_S  shift, and go to state 39
    SMALL_S   shift, and go to state 40
    SUB_S     shift, and go to state 41
    SUP_S     shift, and go to state 42
    IMG_S     shift, and go to state 43
    FIG_S     shift, and go to state 44
    BR_S      shift, and go to state 45

    p_tag       go to state 46
    center_tag  go to state 47
    href_tag    go to state 48
    br_tag      go to state 49
    font_tag    go to state 50
    header_tag  go to state 51
    format_tag  go to state 52
    subsup_tag  go to state 53
    img_tag     go to state 54
    div_tag     go to state 55
    li_tag      go to state 56
    ul_tag      go to state 57
    ol_tag      go to state 58
    dl_tag      go to state 59
    dt_tag      go to state 60
    dd_tag      go to state 61


State 74

    7 body: body . p_tag data
    8     | body . center_tag data
    9     | body . href_tag data
   10     | body . br_tag data
   11     | body . font_tag data
   12     | body . header_tag data
   13     | body . format_tag data
   14     | body . subsup_tag data
   15     | body . img_tag data
   16     | body . div_tag data
   17     | body . li_tag data
   18     | body . ul_tag data
   19     | body . ol_tag data
   20     | body . dl_tag data
   21     | body . dd_tag data
   22     | body . dt_tag data
   43 header_tag: H4_S body . H4_E

    HREF_S    shift, and go to state 18
    FONT_S    shift, and go to state 19
    CENTER_S  shift, and go to state 20
    BR        shift, and go to state 21
    P_S       shift, and go to state 22
    H1_S      shift, and go to state 23
    H2_S      shift, and go to state 24
    H3_S      shift, and go to state 25
    H4_S      shift, and go to state 26
    H4_E      shift, and go to state 120
    UL_S      shift, and go to state 27
    LI_S      shift, and go to state 28
    OL_S      shift, and go to state 29
    DL_S      shift, and go to state 30
    DT_S      shift, and go to state 31
    DD_S      shift, and go to state 32
    DIV_S     shift, and go to state 33
    U_S       shift, and go to state 34
    B_S       shift, and go to state 35
    I_S       shift, and go to state 36
    EM_S      shift, and go to state 37
    TT_S      shift, and go to state 38
    STRONG_S  shift, and go to state 39
    SMALL_S   shift, and go to state 40
    SUB_S     shift, and go to state 41
    SUP_S     shift, and go to state 42
    IMG_S     shift, and go to state 43
    FIG_S     shift, and go to state 44
    BR_S      shift, and go to state 45

    p_tag       go to state 46
    center_tag  go to state 47
    href_tag    go to state 48
    br_tag      go to state 49
    font_tag    go to state 50
    header_tag  go to state 51
    format_tag  go to state 52
    subsup_tag  go to state 53
    img_tag     go to state 54
    div_tag     go to state 55
    li_tag      go to state 56
    ul_tag      go to state 57
    ol_tag      go to state 58
    dl_tag      go to state 59
    dt_tag      go to state 60
    dd_tag      go to state 61


State 75

    7 body: body . p_tag data
    8     | body . center_tag data
    9     | body . href_tag data
   10     | body . br_tag data
   11     | body . font_tag data
   12     | body . header_tag data
   13     | body . format_tag data
   14     | body . subsup_tag data
   15     | body . img_tag data
   16     | body . div_tag data
   17     | body . li_tag data
   18     | body . ul_tag data
   19     | body . ol_tag data
   20     | body . dl_tag data
   21     | body . dd_tag data
   22     | body . dt_tag data
   63 ul_tag: UL_S body . UL_E

    HREF_S    shift, and go to state 18
    FONT_S    shift, and go to state 19
    CENTER_S  shift, and go to state 20
    BR        shift, and go to state 21
    P_S       shift, and go to state 22
    H1_S      shift, and go to state 23
    H2_S      shift, and go to state 24
    H3_S      shift, and go to state 25
    H4_S      shift, and go to state 26
    UL_S      shift, and go to state 27
    UL_E      shift, and go to state 121
    LI_S      shift, and go to state 28
    OL_S      shift, and go to state 29
    DL_S      shift, and go to state 30
    DT_S      shift, and go to state 31
    DD_S      shift, and go to state 32
    DIV_S     shift, and go to state 33
    U_S       shift, and go to state 34
    B_S       shift, and go to state 35
    I_S       shift, and go to state 36
    EM_S      shift, and go to state 37
    TT_S      shift, and go to state 38
    STRONG_S  shift, and go to state 39
    SMALL_S   shift, and go to state 40
    SUB_S     shift, and go to state 41
    SUP_S     shift, and go to state 42
    IMG_S     shift, and go to state 43
    FIG_S     shift, and go to state 44
    BR_S      shift, and go to state 45

    p_tag       go to state 46
    center_tag  go to state 47
    href_tag    go to state 48
    br_tag      go to state 49
    font_tag    go to state 50
    header_tag  go to state 51
    format_tag  go to state 52
    subsup_tag  go to state 53
    img_tag     go to state 54
    div_tag     go to state 55
    li_tag      go to state 56
    ul_tag      go to state 57
    ol_tag      go to state 58
    dl_tag      go to state 59
    dt_tag      go to state 60
    dd_tag      go to state 61


State 76

    7 body: body . p_tag data
    8     | body . center_tag data
    9     | body . href_tag data
   10     | body . br_tag data
   11     | body . font_tag data
   12     | body . header_tag data
   13     | body . format_tag data
   14     | body . subsup_tag data
   15     | body . img_tag data
   16     | body . div_tag data
   17     | body . li_tag data
   18     | body . ul_tag data
   19     | body . ol_tag data
   20     | body . dl_tag data
   21     | body . dd_tag data
   22     | body . dt_tag data
   62 li_tag: LI_S body . LI_E

    HREF_S    shift, and go to state 18
    FONT_S    shift, and go to state 19
    CENTER_S  shift, and go to state 20
    BR        shift, and go to state 21
    P_S       shift, and go to state 22
    H1_S      shift, and go to state 23
    H2_S      shift, and go to state 24
    H3_S      shift, and go to state 25
    H4_S      shift, and go to state 26
    UL_S      shift, and go to state 27
    LI_S      shift, and go to state 28
    LI_E      shift, and go to state 122
    OL_S      shift, and go to state 29
    DL_S      shift, and go to state 30
    DT_S      shift, and go to state 31
    DD_S      shift, and go to state 32
    DIV_S     shift, and go to state 33
    U_S       shift, and go to state 34
    B_S       shift, and go to state 35
    I_S       shift, and go to state 36
    EM_S      shift, and go to state 37
    TT_S      shift, and go to state 38
    STRONG_S  shift, and go to state 39
    SMALL_S   shift, and go to state 40
    SUB_S     shift, and go to state 41
    SUP_S     shift, and go to state 42
    IMG_S     shift, and go to state 43
    FIG_S     shift, and go to state 44
    BR_S      shift, and go to state 45

    p_tag       go to state 46
    center_tag  go to state 47
    href_tag    go to state 48
    br_tag      go to state 49
    font_tag    go to state 50
    header_tag  go to state 51
    format_tag  go to state 52
    subsup_tag  go to state 53
    img_tag     go to state 54
    div_tag     go to state 55
    li_tag      go to state 56
    ul_tag      go to state 57
    ol_tag      go to state 58
    dl_tag      go to state 59
    dt_tag      go to state 60
    dd_tag      go to state 61


State 77
